prevent text wrapping in hsp headers

--- a/public/css/sequenceserver.css
+++ b/public/css/sequenceserver.css
@@ -74,8 +74,8 @@ h4 {
   font-size: 14px;
 }
 
-h3 > .fa,
-h4 > .fa {
+h3>.fa,
+h4>.fa {
   vertical-align: bottom;
 }
 
@@ -108,19 +108,19 @@ a.disabled:hover,
   color: rgb(51, 51, 51);
 }
 
-.navbar-brand > small {
+.navbar-brand>small {
   font-size: 50%;
   vertical-align: text-bottom;
 }
 
-.navbar-nav > li > a {
+.navbar-nav>li>a {
   padding: 10px 7.5px;
   font-size: 14px;
   color: #174465;
 }
 
 /* logo */
-.navbar-brand > img {
+.navbar-brand>img {
   display: inline-block;
 }
 
@@ -131,7 +131,7 @@ a.disabled:hover,
 
 /* Hit header styling */
 .section-header {
-  border-bottom: 1px solid  #c74f14;
+  border-bottom: 1px solid #c74f14;
   padding-left: 1px;
   display: table;
   width: 100%;
@@ -143,16 +143,16 @@ a.disabled:hover,
   width: 100%;
 }
 
-.section-header-sidebar > h4 {
+.section-header-sidebar>h4 {
   font-weight: bold;
   margin-bottom: 0;
 }
 
-.section-header > * {
+.section-header>* {
   display: table-cell;
 }
 
-.section-header > *:first-child {
+.section-header>*:first-child {
   width: 100%;
 }
 
@@ -203,18 +203,18 @@ a.disabled:hover,
   margin-bottom: 0;
 }
 
-.table > thead > tr > th,
-.table > tbody > tr > th,
-.table > tfoot > tr > th,
-.table > thead > tr > td,
-.table > tbody > tr > td,
-.table > tfoot > tr > td {
+.table>thead>tr>th,
+.table>tbody>tr>th,
+.table>tfoot>tr>th,
+.table>thead>tr>td,
+.table>tbody>tr>td,
+.table>tfoot>tr>td {
   border-top: none;
   font-weight: normal;
   padding: 0 0 0 4px;
 }
 
-.table > thead > tr > th {
+.table>thead>tr>th {
   border-bottom: none;
   color: #5f5f5f;
 }
@@ -278,7 +278,8 @@ a.disabled:hover,
  * the element. Show ellipsis instead.
  */
 td.nowrap-ellipsis {
-  max-width: 0; /* https://stackoverflow.com/a/11877033 */
+  max-width: 0;
+  /* https://stackoverflow.com/a/11877033 */
   overflow-x: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -287,17 +288,17 @@ td.nowrap-ellipsis {
 /**
  * Helpers to override :hover and .active on .nav elements.
  */
-.nav.hover-reset > li > a:hover {
+.nav.hover-reset>li>a:hover {
   background-color: inherit;
   color: #c74f14;
 }
 
-.nav.focus-reset > li > a:focus {
+.nav.focus-reset>li>a:focus {
   background-color: inherit;
   color: #c74f14;
 }
 
-.nav.active-bold > .active > a {
+.nav.active-bold>.active>a {
   font-weight: bold;
   color: #c74f14;
 }
@@ -438,7 +439,7 @@ input[type=checkbox] {
 /**********************
         Sidebar
  **********************/
-.sidebar > div {
+.sidebar>div {
   /* To line up with the results on the right */
   margin-top: 0;
 }
@@ -459,6 +460,7 @@ input[type=checkbox] {
 }
 
 @media (min-width: 992px) {
+
   /* MacBook Pro etc. */
   .sidebar.affix {
     width: 212.5px;
@@ -466,6 +468,7 @@ input[type=checkbox] {
 }
 
 @media (min-width: 1200px) {
+
   /* iMac etc. */
   .sidebar.affix {
     width: 262.5px;
@@ -519,8 +522,10 @@ input[type=checkbox] {
 }
 
 .hsp-stats {
-  font-size: 12px;
+  font-size: 13px;
+  letter-spacing: .7px;
   color: #5f5f5f;
+  font-weight: 600;
 }
 
 .hsp-lines {
@@ -539,11 +544,11 @@ input[type=checkbox] {
   color: #1b557a;
 }
 
-.fastan > .section-header {
+.fastan>.section-header {
   padding-bottom: 8px;
 }
 
-.fastan > .section-content {
+.fastan>.section-content {
   padding-top: 8px;
   padding-left: 0;
 }
@@ -627,9 +632,11 @@ input[type=checkbox] {
 .input-group-btn {
   vertical-align: top;
 }
+
 #advanced-params-dropdown {
   padding: 0;
 }
+
 #advanced-params-dropdown li {
   padding: 10px;
   cursor: pointer;
